# rp2040_esp-01

./: CMakeLists.txt  README.md  build.sh  set_env.sh
include/: hello_uart.h  print.h  tusb_config.h  uart.h
src/: main.c  print.c  socket_testing.c  usb_descriptors.c  ws2812.pio
